#1450: Code clean-up